# fud

./: CMakeLists.txt  Doxyfile  INSTALL.txt  README.txt  SConscript
apps/counter/client/: CMakeLists.txt  counter_client.cpp  counter_processor.cpp  counter_processor.h
apps/counter/server/: CMakeLists.txt  counter.cpp  counter.h  counter_main.cpp  number_database.h
apps/file-size-counter/client/: CMakeLists.txt  counter_client.cpp  counter_processor.cpp  counter_processor.h
apps/file-size-counter/client/include/: counter_processor.h
apps/file-size-counter/server/: CMakeLists.txt  counter.cpp  counter.h  counter_main.cpp
apps/file-size-counter/server/data/: file1.txt  short.txt
layers/layer3-recabs/: CMakeLists.txt  SConscript  recabs.h
layers/layer3-recabs/apps/binary-search/: CMakeLists.txt  binary_search.cpp  binary_search.h  bs_deserializer.cpp  bs_deserializer.h  l4_client_bs.cpp  l4_client_bs.h  l4_server_bs.cpp  l4_server_bs.h  main_fud_client.cpp  main_fud_server.cpp  main_prototype.cpp
layers/layer3-recabs/client/: by_size_result_sender.cpp  by_size_result_sender.h  deserializer_functor.h  distributable_recursive_processor.cpp  distributable_recursive_processor.h  l4_client_app.h  recursive_processor.h  result_sender.cpp  result_sender.h
layers/layer3-recabs/common/: common.h  recursive_functor.h  serializable_recursive_functor.h
layers/layer3-recabs/distribution/: CMakeLists.txt
layers/layer3-recabs/distribution/fud/client/: fud_result_sender.cpp  fud_rprocessor.cpp  (+1 more)
layers/layer3-recabs/doc/proposal/: biblio.bib
layers/layer3-recabs/server/: l4_server_app.h  recursion_manager.cpp  recursion_manager.h
layers/layer4-combinatoryEngine/: CMakeLists.txt  CONTRIBUTORS  Doxyfile  INSTALL  README
layers/layer4-combinatoryEngine/apps/RNAFoldingFE/: CMakeLists.txt  main_client.cpp  main_server.cpp  rna_exception.h  rnaffe.help  rnaffe_application_client.cpp  rnaffe_application_client.h  rnaffe_application_server.cpp  rnaffe_application_server.h  rnaffe_node.cpp  rnaffe_node.h  rnaffe_prune_policy.h  states.h  states_imp.h
layers/layer4-combinatoryEngine/apps/clothes-changer/: CMakeLists.txt  Main.cpp  clothe.cpp  clothe.h  clothes_application_client_imp.cpp  clothes_application_client_imp.h  clothes_application_server_imp.cpp  clothes_application_server_imp.h  clothes_node.cpp  clothes_node.h  main_client.cpp  main_server.cpp  tables.cpp  tables.h
layers/layer4-combinatoryEngine/client/: l5_application_client.h
layers/layer4-combinatoryEngine/common/: combination_oberver.h  combination_policy.cpp  combination_policy.h  l4_node.cpp  l4_node.h  prune_policy.h
layers/layer4-combinatoryEngine/doc/informe/: 1_introduccion.tex  2_marco_teorico.tex  3_metodologia_de_trabajo.tex  4_sobre_combinatory_engine.tex  5_disenio.tex  6_implementacion.tex  7_aplicaciones_de_juguete.tex  8_rna_folding_free_energy_app.tex  9_conclusiones.tex  appendix.tex  biblio.bib  main_thesis.tex
layers/layer4-combinatoryEngine/doc/presentation/: presentation-structure.txt  presentation.tex
layers/layer4-combinatoryEngine/doc/responsabilities/: resp.tex
layers/layer4-combinatoryEngine/libplugin/: composed_combination_policy_parallel.cpp  composed_combination_policy_parallel.h  composed_combination_policy_sequencial.cpp  composed_combination_policy_sequencial.h  list_combination_policy.cpp  list_combination_policy.h  newtonian_combination_policy.cpp  newtonian_combination_policy.h  observer_aux.cpp  observer_aux.h
layers/layer4-combinatoryEngine/libs/antivirals/: CMakeLists.txt  antivirals.h
layers/layer4-combinatoryEngine/libs/rnafolding/: CMakeLists.txt  rnafolding.h
layers/layer4-combinatoryEngine/server/: l5_application_server.h
layers/layer4-combinatoryEngine/src/: CMakeLists.txt  combeng.h
layers/layer4-combinatoryEngine/src/client/: l5_application_client.h
layers/layer4-combinatoryEngine/src/combination_policies/: combination_policy_predicate.h  composed_combination_policy_parallel.h  composed_combination_policy_sequencial.h  list_combination_policy.h  newtonian_combination_policy.h  observer_aux.h
layers/layer4-combinatoryEngine/src/common/: combination_observer.h  combination_policy.h  l4_node.h  prune_policy.h  state_set.h
layers/layer4-combinatoryEngine/src/server/: l5_application_server.h
sandbox/asio/src/: CMakeLists.txt  asio_client.cpp  asio_client.hpp  asio_server.cpp  asio_server.hpp  asio_server_client.cpp  asio_server_client.hpp  client.cpp  client_proxy.cpp  client_proxy.hpp  common.hpp  server.cpp  server_client.cpp
src/: CMakeLists.txt  fud.h
src/client/: client_processor.cpp  client_processor.h  distribution_client.cpp  distribution_client.h  interactive_helper.cpp  interactive_helper.h  processors_manager.cpp  processors_manager.h  sender.cpp  sender.h
src/common/: common.h  distributable_job.h  fud.h  fud_client.h  fud_server.h  job_unit.cpp  job_unit.h
src/middlewares/: CMakeLists.txt
src/middlewares/ana/: CMakeLists.txt
src/middlewares/ana/client/: ana_distribution.cpp  ana_distribution.h
src/middlewares/ana/server/: ana_clients_manager.cpp  ana_clients_manager.h
src/middlewares/asio/: CMakeLists.txt
src/middlewares/asio/client/: async_io_distribution.cpp  async_io_distribution.h
src/middlewares/asio/server/: async_io_clients_manager.cpp  async_io_clients_manager.h
src/middlewares/boinc/: CMakeLists.txt
src/middlewares/boinc/client/: boinc_distribution.cpp  boinc_distribution.h
src/middlewares/boinc/common/: boinc_common.h  boinc_constants.h  boinc_exception.h
src/middlewares/boinc/doc/: How-to-install.tex
src/middlewares/boinc/server/: boinc_clients_manager.cpp  boinc_clients_manager.h
src/middlewares/boinc/templates/: fud_re.xml  fud_wu.xml
src/server/: client_proxy.cpp  client_proxy.h  client_requests_listener.h  clients_event_listener.h  clients_manager.cpp  clients_manager.h  delegator.cpp  delegator.h  distributable_job.cpp  events.h  job_listener.h  job_manager.cpp  job_manager.h  job_manager_listener.h  processing_history.cpp  processing_history.h  synchronized_containers.h  work_stats.h
(+167 files in other folders)
